# fax

./: AGENTS.md  Cargo.toml  LICENSE  README.md  TODO.md  mountain_drawing.drinfo  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
drinfo/: Cargo.toml  README.md
drinfo/src/: brush.rs  color.rs  drawing.rs  error.rs  layer.rs  lib.rs  point.rs
drinfo/src/instructions/: bucket.rs  insert_image.rs  instruction.rs  mod.rs  motion.rs  stroke.rs
tolower/: Cargo.toml  README.md
tolower/src/: args.rs  main.rs
tolower/src/routes/: pages.rs  ws.rs
tolower/src/ws/: handler.rs  messages.rs  mod.rs  server.rs
toupper/: TODO.md  eslint.config.js  package.json  pnpm-lock.yaml
toupper/src/lib/: canvas-worker.ts  default.ts  env.ts  state.svelte.ts  types.ts  util.ts  ws-handlers.svelte.ts
toupper/src/lib/drinfo/: brush.ts  drawing.svelte.ts  index.ts  instruction.ts  layer.svelte.ts  layer.ts
toupper/src/lib/render/: cursor.ts  draw.ts  index.ts  instruction.ts  renderer.ts
toupper/src/lib/tolower/: index.ts  server-types.ts  server.ts
toupper/src/lib/tolower/type-converter/: from-server.ts  index.ts  to-server.ts
toupper/src/lib/tools/: bucket.ts  color-picker.ts  eraser.ts  image-insertion.ts  index.ts  move.ts  poly-selection.ts  selection.ts  stroke.ts  transform.ts
toupper/src/lib/toupper/: bucket-worker.ts  canvas-worker.ts  default.ts  index.ts  instruction.ts  types.ts  util.ts
toupper/src/lib/toupper/tools/: bucket.ts  color-picker.ts  image-insertion.ts  move.ts  poly-selection.ts  selection.ts  stroke.ts
toupper/src/routes/: +layout.svelte  +page.svelte
toupper/src/routes/lobby/[lobby]/: +page.svelte  BgCanvas.svelte  (+15 more)
(+3 files in other folders)
