[package]
name = "tolower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
actix-web = "4.1"
actix-http = "3.2"
actix-web-actors = "4.1"
actix-files = "0.6"
clap = { version = "3.1.1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.9.0"
log = "0.4.0"
chrono = "0.4"
ciborium = "0.2.0"

drawing = { path = "../drinfo" }
